--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,10 @@
+2014-12-05 Version 2.0.1
+
+	* Fixed issue with calculating server TTLs
+	* Added a status CLI command that checks if there are any running servers
+	* Displayed tasks' finished times properly
+	* Added a --skip-checks option to load
+
 2014-12-05 Version 2.0.0
 
 	* Initial open source release
